--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "copyfiles swagger.yml dist && tsc",
+    "build": "yarn clear && copyfiles swagger.yml dist && tsc",
+    "clear": "rimraf dist",
     "lint": "eslint './src/**/*.ts' ./tests",
     "lint:fix": "eslint './src/**/*.ts' ./tests --fix",
     "lint:report": "npm run lint -- -f node_modules/eslint-html-reporter/reporter.js -o reports/linter/index.html",
@@ -25,14 +26,19 @@
     "axios": "0.19.0",
     "dotenv": "8.1.0",
     "express": "4.17.1",
+    "http-status": "^1.4.2",
     "inversify": "5.0.1",
     "inversify-express-utils": "6.3.2",
     "lodash": "4.17.15",
+    "moment": "^2.25.3",
+    "nanoid": "^3.1.6",
+    "neo4j-driver": "^4.0.2",
     "on-finished": "^2.3.0",
     "pino": "5.13.5",
     "reflect-metadata": "0.1.13",
     "swagger-ui-dist": "3.24.3",
     "swagger-ui-express": "4.1.2",
+    "uuid": "^8.0.0",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
@@ -43,12 +49,14 @@
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "24.0.15",
     "@types/lodash": "4.14.138",
-    "@types/nanoid": "2.0.0",
+    "@types/moment": "^2.13.0",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "12.6.3",
     "@types/on-finished": "^2.3.1",
     "@types/pino": "5.8.10",
     "@types/swagger-ui-dist": "3.0.4",
     "@types/swagger-ui-express": "3.0.1",
+    "@types/uuid": "^7.0.3",
     "@types/yamljs": "0.2.30",
     "@typescript-eslint/eslint-plugin": "2.23.0",
     "@typescript-eslint/parser": "2.23.0",
@@ -66,6 +74,7 @@
     "jest-junit": "9.0.0",
     "nodemon": "1.19.2",
     "pino-pretty": "3.2.1",
+    "rimraf": "^3.0.2",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "typescript": "3.8.3"
