--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ POSTGRES_DB=db
 NEO4J_dbms_memory_pagecache_size=1G
 NEO4J_dbms.memory.heap.initial_size=1G
 NEO4J_dbms_memory_heap_max__size=1G
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password
 # HTTP server
 HTTP_SERVER_PORT=3000
 HTTP_BASE_PATH=/
