--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: neo4j:3.5
     restart: unless-stopped
     ports:
-      - 7474:7474
-      - 7687:7687
+      - ${NEO4J_ADMIN_PORT}:${NEO4J_ADMIN_PORT}
+      - ${NEO4J_PORT}:${NEO4J_PORT}
     volumes:
       - ./graph-db/conf:/conf
       - ./graph-db/data:/data
@@ -18,7 +18,7 @@ services:
   postgres:
     image: postgres:10.4
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     env_file:
       - ./.env
     volumes:
