--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # postgres config
+POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=db
@@ -7,6 +8,8 @@ NEO4J_dbms_memory_pagecache_size=1G
 NEO4J_dbms.memory.heap.initial_size=1G
 NEO4J_dbms_memory_heap_max__size=1G
 
+NEO4J_PORT=7687
+NEO4J_ADMIN_PORT=7474
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
