--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint './src/**/*.ts' ./tests",
     "lint:fix": "eslint './src/**/*.ts' ./tests --fix",
     "lint:report": "npm run lint -- -f node_modules/eslint-html-reporter/reporter.js -o reports/linter/index.html",
+    "format": "prettier --write \"src/**/*.ts\"",
     "prestart": "npm run build",
     "start": "node -r dotenv/config .",
     "start:dev": "nodemon -e ts,json -i dist -i tests -i reports -x \"npm start\" | pino-pretty -t HH:MM:ss",
@@ -74,6 +75,7 @@
     "jest-junit": "9.0.0",
     "nodemon": "1.19.2",
     "pino-pretty": "3.2.1",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
