--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "people-graph-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "app for building graph with people",
   "main": "dist/index.js",
   "repository": "https://github.com/olehmushka/people-graph-app",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "yarn clear && copyfiles swagger.yml dist && tsc",
+    "build": "yarn clear && copyfiles swagger.yml dist && echo Using TypeScript && tsc --version && tsc --pretty",
     "clear": "rimraf dist",
     "lint": "eslint './src/**/*.ts' ./tests",
     "lint:fix": "eslint './src/**/*.ts' ./tests --fix",
@@ -22,11 +22,13 @@
     "test:integration": ""
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
     "@hapi/boom": "8.0.1",
     "@hapi/joi": "^17.1.1",
     "axios": "0.19.0",
     "dotenv": "8.1.0",
     "express": "4.17.1",
+    "grpc": "^1.24.2",
     "http-status": "^1.4.2",
     "inversify": "5.0.1",
     "inversify-express-utils": "6.3.2",
@@ -46,6 +48,7 @@
     "@types/chai": "4.2.1",
     "@types/express": "4.17.0",
     "@types/faker": "4.1.9",
+    "@types/google-protobuf": "^3.7.2",
     "@types/hapi__boom": "7.4.1",
     "@types/hapi__joi": "^17.1.0",
     "@types/jest": "24.0.15",
@@ -71,6 +74,9 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-mocha-no-only": "1.1.0",
     "faker": "4.1.0",
+    "google-protobuf": "^3.12.0",
+    "grpc-tools": "^1.8.1",
+    "grpc_tools_node_protoc_ts": "^3.0.0",
     "jest": "24.9.0",
     "jest-junit": "9.0.0",
     "nodemon": "1.19.2",
