added postgres module

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=db
+POSTGRES_HOST=localhost
 # neo4h config
 NEO4J_dbms_memory_pagecache_size=1G
 NEO4J_dbms.memory.heap.initial_size=1G
