--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "Oleh Mushka <olegamysk@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=12.13"
+  },
   "scripts": {
     "build": "yarn clear && copyfiles swagger.yml dist && echo Using TypeScript && tsc --version && tsc --pretty",
     "clear": "rimraf dist",
@@ -14,7 +17,7 @@
     "lint:fix": "eslint './src/**/*.ts' ./tests --fix",
     "lint:report": "npm run lint -- -f node_modules/eslint-html-reporter/reporter.js -o reports/linter/index.html",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prestart": "npm run build",
+    "prestart": "yarn format && yarn build",
     "start": "node -r dotenv/config .",
     "start:dev": "nodemon -e ts,json -i dist -i tests -i reports -x \"npm start\" | pino-pretty -t HH:MM:ss",
     "test": "jest",
@@ -22,45 +25,47 @@
     "test:integration": ""
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.4",
+    "@grpc/proto-loader": "0.5.4",
     "@hapi/boom": "8.0.1",
-    "@hapi/joi": "^17.1.1",
+    "@hapi/joi": "17.1.1",
     "axios": "0.19.0",
     "dotenv": "8.1.0",
     "express": "4.17.1",
-    "grpc": "^1.24.2",
-    "http-status": "^1.4.2",
+    "grpc": "1.24.2",
+    "http-status": "1.4.2",
     "inversify": "5.0.1",
     "inversify-express-utils": "6.3.2",
     "lodash": "4.17.15",
-    "moment": "^2.25.3",
-    "nanoid": "^3.1.6",
-    "neo4j-driver": "^4.0.2",
-    "on-finished": "^2.3.0",
+    "moment": "2.25.3",
+    "nanoid": "3.1.6",
+    "neo4j-driver": "4.0.2",
+    "on-finished": "2.3.0",
+    "pg": "8.2.1",
     "pino": "5.13.5",
     "reflect-metadata": "0.1.13",
     "swagger-ui-dist": "3.24.3",
     "swagger-ui-express": "4.1.2",
-    "uuid": "^8.0.0",
+    "uuid": "8.0.0",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
     "@types/chai": "4.2.1",
     "@types/express": "4.17.0",
     "@types/faker": "4.1.9",
-    "@types/google-protobuf": "^3.7.2",
+    "@types/google-protobuf": "3.7.2",
     "@types/hapi__boom": "7.4.1",
-    "@types/hapi__joi": "^17.1.0",
+    "@types/hapi__joi": "17.1.0",
     "@types/jest": "24.0.15",
     "@types/lodash": "4.14.138",
-    "@types/moment": "^2.13.0",
-    "@types/nanoid": "^2.1.0",
+    "@types/moment": "2.13.0",
+    "@types/nanoid": "2.1.0",
     "@types/node": "12.6.3",
-    "@types/on-finished": "^2.3.1",
+    "@types/on-finished": "2.3.1",
+    "@types/pg": "7.14.3",
     "@types/pino": "5.8.10",
     "@types/swagger-ui-dist": "3.0.4",
     "@types/swagger-ui-express": "3.0.1",
-    "@types/uuid": "^7.0.3",
+    "@types/uuid": "7.0.3",
     "@types/yamljs": "0.2.30",
     "@typescript-eslint/eslint-plugin": "2.23.0",
     "@typescript-eslint/parser": "2.23.0",
@@ -74,15 +79,15 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-mocha-no-only": "1.1.0",
     "faker": "4.1.0",
-    "google-protobuf": "^3.12.0",
-    "grpc-tools": "^1.8.1",
-    "grpc_tools_node_protoc_ts": "^3.0.0",
+    "google-protobuf": "3.12.0",
+    "grpc-tools": "1.8.1",
+    "grpc_tools_node_protoc_ts": "3.0.0",
     "jest": "24.9.0",
     "jest-junit": "9.0.0",
     "nodemon": "1.19.2",
     "pino-pretty": "3.2.1",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
+    "prettier": "2.0.5",
+    "rimraf": "3.0.2",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "typescript": "3.8.3"
