--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
-    "lib": ["es2019", "dom"],
+    "lib": ["es2019"],
     "module": "commonjs",
     "target": "es2016",
     "sourceMap": true,
@@ -14,20 +14,20 @@
     "noImplicitAny": true,
     "allowJs": true,
     "strictNullChecks": true,
-    "types": [ "node", "reflect-metadata", "jest" ],
+    "types": [ "jest", "node", "reflect-metadata" ],
     "resolveJsonModule": true,
     "importHelpers": false,
     "declaration": true,
     "strict": true,
     "outDir": "dist",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "*": [
-        "./node_modules/*"
+        "node_modules/*"
       ]
     },
     "typeRoots": [
-        "./node_modules/@types"
+        "node_modules/@types"
     ]
   },
   "include": [
