added mappers, set default format for datetime

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "max-len": ["error", { "code": 120 }],
     "linebreak-style": ["error", "unix"],
     "newline-before-return": "error",
+    "no-console": "error",
     "padding-line-between-statements": [
       "error",
       { "blankLine": "always", "prev": "if", "next": "if" }
