--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "build": "yarn clear && copyfiles swagger.yml dist && echo Using TypeScript && tsc --version && tsc --pretty",
     "clear": "rimraf dist",
-    "lint": "eslint './src/**/*.ts' ./tests",
-    "lint:fix": "eslint './src/**/*.ts' ./tests --fix",
+    "lint": "eslint './src/**/*.ts'",
+    "lint:fix": "eslint './src/**/*.ts' --fix",
     "lint:report": "npm run lint -- -f node_modules/eslint-html-reporter/reporter.js -o reports/linter/index.html",
     "format": "prettier --write \"src/**/*.ts\"",
     "prestart": "yarn format && yarn build",
@@ -23,17 +23,22 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
 
-    "run-create-one-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/create-one.js",
-    "run-get-all-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/get-all.js",
-    "run-delete-one-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/delete-one.js",
+    "http:generate:models": "./node_modules/@manifoldco/swagger-to-ts/bin/cli.js ./swagger.yml --wrapper \"export namespace API\" --camelcase -o src/servers/http/api/models/schema.ts",
+    "http:clean:models": "rimraf src/models/models.d.ts",
 
-    "create-tables": "node -r dotenv/config ./dist/scripts/migrations/create-tables.js",
-    "drop-tables": "node -r dotenv/config ./dist/scripts/migrations/drop-tables.js"
+    "grpc:generate:proto": "npx bash ./scripts/protoc.sh",
+    "grpc:run-create-one-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/create-one.js",
+    "grpc:run-get-all-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/get-all.js",
+    "grpc:run-delete-one-person": "node -r dotenv/config ./dist/src/core/clients/grpc/person/delete-one.js",
+
+    "sql:create-tables": "node -r dotenv/config ./dist/scripts/migrations/create-tables.js",
+    "sql:drop-tables": "node -r dotenv/config ./dist/scripts/migrations/drop-tables.js"
   },
   "dependencies": {
     "@grpc/proto-loader": "0.5.4",
     "@hapi/boom": "8.0.1",
     "@hapi/joi": "17.1.1",
+    "@hapi/joi-date": "^2.0.1",
     "axios": "0.19.0",
     "dotenv": "8.1.0",
     "express": "4.17.1",
@@ -55,6 +60,7 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "@manifoldco/swagger-to-ts": "1.7.1",
     "@types/chai": "4.2.1",
     "@types/express": "4.17.0",
     "@types/faker": "4.1.9",
