--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-chai-friendly": "0.5.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-mocha-no-only": "1.1.0",
+    "eslint-plugin-unused-imports": "0.1.3",
     "faker": "4.1.0",
     "google-protobuf": "3.12.0",
     "grpc-tools": "1.8.1",
