--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@hapi/boom": "8.0.1",
     "@hapi/joi": "17.1.1",
     "@hapi/joi-date": "^2.0.1",
+    "axios": "0.19.2",
+    "cheerio": "1.0.0-rc.3",
     "dotenv": "8.1.0",
     "express": "4.17.1",
     "grpc": "1.24.2",
@@ -59,7 +61,9 @@
   },
   "devDependencies": {
     "@manifoldco/swagger-to-ts": "1.7.1",
+    "@types/axios": "0.14.0",
     "@types/chai": "4.2.1",
+    "@types/cheerio": "0.22.18",
     "@types/express": "4.17.0",
     "@types/faker": "4.1.9",
     "@types/google-protobuf": "3.7.2",
@@ -88,7 +92,7 @@
     "eslint-plugin-chai-friendly": "0.5.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-mocha-no-only": "1.1.0",
-    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-security": "1.4.0",
     "eslint-plugin-unused-imports": "0.1.3",
     "faker": "4.1.0",
     "google-protobuf": "3.12.0",
