added new retrievers

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,12 @@ HTTP_BASE_PATH=/
 HTTP_SWAGGER_BASE_PATH=/
 # gRPC server
 GRPC_SERVER_PORT=3001
+# common
+DATETIME_FORMAT=YYYY-MM-DDTHH:mm:ssZ
+# services
+WIKIPEDIA_HOST=https://simple.wikipedia.org
+WIKIPEDIA_COUNTRIES_PATH=/wiki/List_of_countries
+GEOGRAPHIC_HOST=https://geographic.org
+GEOGRAPHIC_COUNTRY_CODES=/countries/county_codes.html
+REST_COUNTRIES_HOST=https://restcountries.eu/
+REST_COUNTRIES_COUNTRIES_V2_PATH=/rest/v2
