--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pg": "8.2.1",
     "pino": "5.13.5",
     "reflect-metadata": "0.1.13",
+    "rxjs": "6.5.5",
     "swagger-ui-dist": "3.24.3",
     "swagger-ui-express": "4.1.2",
     "uuid": "8.0.0",
