--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,7 @@ GEOGRAPHIC_HOST=https://geographic.org
 GEOGRAPHIC_COUNTRY_CODES=/countries/county_codes.html
 REST_COUNTRIES_HOST=https://restcountries.eu/
 REST_COUNTRIES_COUNTRIES_V2_PATH=/rest/v2
+INSTAGRAM_HOST=https://www.instagram.com
+INSTAGRAM_LOGIN_PATH=/accounts/login/?source=auth_switcher
+INSTAGRAM_LOGIN_EMAIL=example@mail.com
+INSTAGRAM_LOGIN_PASSWORD=example_password
