--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "on-finished": "2.3.0",
     "pg": "8.2.1",
     "pino": "5.13.5",
+    "puppeteer": "4.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.5.5",
     "swagger-ui-dist": "3.24.3",
@@ -78,6 +79,7 @@
     "@types/on-finished": "2.3.1",
     "@types/pg": "7.14.3",
     "@types/pino": "5.8.10",
+    "@types/puppeteer": "3.0.0",
     "@types/swagger-ui-dist": "3.0.4",
     "@types/swagger-ui-express": "3.0.1",
     "@types/uuid": "7.0.3",
