--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=db
 POSTGRES_HOST=localhost
-# neo4h config
+# neo4j config
 NEO4J_dbms_memory_pagecache_size=1G
 NEO4J_dbms.memory.heap.initial_size=1G
 NEO4J_dbms_memory_heap_max__size=1G
